tests/src/Loader/classloader/generics/Instantiation/Positive/NestedClass04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_NestedClass04_NestedClass04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_NestedClass04_NestedClass04_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\NestedClass04\\NestedClass04.cmd");
        }
    }
}
