tests/src/Loader/classloader/generics/Instantiation/Negative/abstract06.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract06_abstract06_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract06_abstract06_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract06\\abstract06.cmd");
        }
    }
}
